# neural-pruning

./: .gitignore  CMakeLists.txt  LICENSE  README.md  neural_pruning_test.cpp
cmake/: CodeSign.cmake  Package.cmake
plugin/: CMakeLists.txt  console_logger.h  lstm_model.cpp  lstm_model.h  neural_pruning_plugin.cpp  neural_pruning_plugin.h  plugin_editor.cpp  plugin_editor.h
proto/: CMakeLists.txt  conv_pruning_test.cpp  dense_pruning_test.cpp  lstm_pruning_test.cpp
pruning_experiments/: conv_pruning_test.cpp  dense_pruning_test.cpp  lstm_pruning_test.cpp
train/: conv.json  conv.py  dense.json  dense.py  lstm.json  lstm.py  plot_results.py
